--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="utf-8">
-  <title>Controle de Entrada</title>
+  <title>CCB - Controle de Entrada de Reunião</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,7 +15,7 @@
   <!-- Timeline CSS -->
   <link href="assets/css/timeline.css" rel="stylesheet">
   <!-- Custom CSS -->
-  <link href="assets/css/startmin.css" rel="stylesheet">
+  <link href="assets/css/ccb.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
