Adicionando perfil para os menus

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,6 @@
 <!-- Metis Menu Plugin JavaScript -->
 <script src="assets/js/metisMenu.min.js"></script>
 <!-- Custom Theme JavaScript -->
-<script src="assets/js/startmin.js"></script>
+<script src="assets/js/ccb.js"></script>
 
 </html>
